<resources>
    <string name="app_name">TestingDemo</string>
    <string name="title_main">MainActivity</string>
    <string name="title_second">SecondActivity</string>
    <string name="title_activity_fragments">FragmentsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello from first fragment</string>
    <string name="hello_second_fragment">Hello from second fragment</string>
    <string name="fragments">Fragments</string>
    <string name="dialog_title">Enter Input Data</string>
    <string name="button">Button</string>
    <string name="launch_dialog">Launch Dialog</string>
    <string name="toast_message">Toast message</string>
</resources>
